2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Rename main header/source files.
	* src/solver.cc: Rename from src/optimization.cc.
	* src/solver.hh: Rename from src/optimization.hh.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Add dummy plug-in placeholder.
	* configure.ac: Generate plug-in, dummy Makefiles.
	* src/Makefile.am: Add plug-in to SUBDIRS.
	* src/plug-in/Makefile.am: New.
	* src/plug-in/dummy/Makefile.am: New.
	* src/plug-in/dummy/dummy.cc: New.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Ignore svnw related files.
	* .gitignore: Here.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix compilation issues.
	* .gitignore: Add Autotools generated files.
	* configure.ac: Set where Libool should copy its files.
	* tests/Makefile.am: Add simple-test.
	* tests/simple-test.cc: Add missing header.
	* tests/simple-test.stdout: Add simple-test output.
