@@ -1,5 +1,10 @@
 2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Update and add support for Boost.Optional.
+	* build-aux/boost.m4: Here.
+
+2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Rename main header/source files.
 	* src/solver.cc: Rename from src/optimization.cc.
 	* src/solver.hh: Rename from src/optimization.hh.
